<resources>
    <string name="app_name">Contadroid</string>
    <string name="empty"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_menu_actual_month">Mes Actual</string>
    <string name="navigation_drawer_menu_chart">Resumen Año</string>
    <string name="navigation_drawer_menu_template">Definir Plantilla</string>
    <string name="navigation_drawer_menu_settings">Opciones</string>
    <string name="navigation_drawer_menu_logout">Cerrar Sesion</string>
    <string name="navigation_drawer_menu_login">Iniciar Sesion</string>


    <string name="actual_month_title">Mes Actual</string>
    <string name="actual_month_tab_expenses_paid">Realizados</string>
    <string name="actual_month_tab_expenses_paid_empty_case">No hay pagos realizados</string>
    <string name="actual_month_tab_expenses_not_paid">Pendientes</string>
    <string name="actual_month_tab_expenses_not_paid_empty_case">No hay gastos pendientes</string>
    <string name="actual_month_activity_title">Mes Actual</string>
    <string name="actual_month_dialog_edit">Editar</string>
    <string name="actual_month_dialog_delete">Eliminar</string>


    <string name="action_settings">Opciones</string>

    <string name="group_income">Ingresos</string>
    <string name="group_home">Casa</string>
    <string name="group_transport">Transporte</string>
    <string name="group_food">Comida</string>
    <string name="group_shopping">Compras</string>
    <string name="group_leisure">Ocio</string>
    <string name="group_other">Otros</string>
    <string name="group_empty">Vacío</string>

    <string name="detail_expense_title_activity">Añadir Gasto</string>
    <string name="detail_expense_name_hint">Nombre</string>
    <string name="detail_expense_description_hint">Descripción</string>
    <string name="detail_expense_amount_hint">Importe</string>
    <string name="detail_expense_category_card_title">Categorias</string>
    <string name="detail_expense_menu_save">Guardar</string>
    <string name="detail_expense_init_error">Falta</string>
    <string name="detail_expense_name_error">el nombre del gasto</string>
    <string name="detail_expense_amount_error">la cantidad de dinero</string>
    <string name="detail_expense_group_error">el tipo de gasto</string>
    <string name="save_error">Error al guardar el Gasto</string>
    <string name="delete_error">Error al borrar el gasto</string>
    <string name="changePaid_error">Error al cambiar el estado del gasto</string>
    <string name="save_correct">Gasto guardado correctamente</string>
    <string name="delete_correct">Gasto borrado correctamente</string>
    <string name="template_empty_case">No hay gastos en la plantilla</string>
    <string name="template_title">Plantilla</string>
    <string name="add_template_to_month_correct">Gastos de la plantilla guardados correctamente</string>
    <string name="add_template_to_month_error">Error al guardar los gastos de la plantilla en el mes</string>
    <string name="summary_emtpy_case">No hay datos para sacar el resumen anual</string>
    <string name="summary_title">Resumen anual</string>
    <string name="add_template_to_month_alert_title">¿Añadir la plantilla al mes actual?</string>
    <string name="alert_yes_option">Sí</string>
    <string name="alert_no_option">No</string>
    <string name="basic_activity_alert_exit_message">¿Seguro que desea cerrar la aplicación?</string>


</resources>
