<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/first_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_actual_month"
            android:icon="@drawable/calendar"
            android:title="@string/navigation_drawer_menu_actual_month" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/chart_areaspline"
            android:title="@string/navigation_drawer_menu_chart" />
        <item
            android:id="@+id/nav_template"
            android:icon="@drawable/file_document_box"
            android:title="@string/navigation_drawer_menu_template" />
    </group>

    <group android:id="@+id/second_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_box"
            android:title="@string/navigation_drawer_menu_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login_variant"
            android:title="@string/navigation_drawer_menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_variant"
            android:visible="false"
            android:title="@string/navigation_drawer_menu_logout" />
    </group>
</menu>
